# dans-log-formatter

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-release.yml  release.yml  test.yml
dans_log_formatter/: __init__.py  formatter.py  formatter_error.py
dans_log_formatter/contrib/: orjson.py  ujson.py
dans_log_formatter/contrib/celery/: provider.py
dans_log_formatter/contrib/django/: middleware.py  provider.py
dans_log_formatter/contrib/fastapi/: middleware.py  provider.py
dans_log_formatter/contrib/flask/: provider.py
dans_log_formatter/providers/: abstract.py  abstract_context.py  context.py  extra.py  runtime.py
tests/: benchmark_test.py  celery_test.py  context_provider_test.py  context_test.py  django_test.py  error_handling_test.py  extra_provider_test.py  fastapi_test.py  flask_test.py  formatter_test.py  runtime_provider_test.py  utils.py
